<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aldair.contactos.AgregarContacto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/cancelar"
            android:id="@+id/ivCancelar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtAgregarContacto"
            android:text="@string/agregarContacto"
            android:textSize="25dp"
            android:layout_marginTop="17dp"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:src="@drawable/aceptar"
            android:layout_marginTop="15dp"
            android:id="@+id/ivAceptar"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/contacto"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:id="@+id/txtNombre"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/sobre"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="10dp"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/txtEmail"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/telefono"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:id="@+id/txtTelefono"
            android:inputType="phone"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/camara"
            android:layout_marginLeft="10dp"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/retrato"
            android:id="@+id/ivImagen"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambiar"
            android:layout_marginLeft="20dp"
            android:id="@+id/btnAgregarImagen"/>

    </LinearLayout>


</LinearLayout>
